k8s/votingapp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: votingapp
spec:
  ports:
    - port: 80
  selector:
    app: votingapp
